plush | added total nzb counts to q/h and played with tooltip margin to prevent jumping

--- a/main/interfaces/Plush/templates/static/stylesheets/plush-default.css
+++ b/main/interfaces/Plush/templates/static/stylesheets/plush-default.css
@@ -890,7 +890,7 @@ fieldset.EntryFieldSet {
 	padding: 5px;
 	opacity: 0.85;
 	text-align: right;
-	margin-left:-50px;
+	margin-left:-90px;
 }
 #tooltip h3, #tooltip div { margin: 0; }
 
